--- a/ClassLibrary1/BLL/Resource/Resource.resx
+++ b/ClassLibrary1/BLL/Resource/Resource.resx
@@ -130,7 +130,7 @@
     <value>Password must be at least 8 characters and contain uppercase letters, lowercase letters, numbers, special characters.</value>
   </data>
   <data name="PortfolioIdNotSet" xml:space="preserve">
-    <value>Not set id of portfolio</value>
+    <value>Not set id of Portfolio</value>
   </data>
   <data name="PortfolioNotFound" xml:space="preserve">
     <value>Portfolio not found</value>
@@ -139,7 +139,7 @@
     <value>Portfolio is null reference</value>
   </data>
   <data name="PositionIdNotSet" xml:space="preserve">
-    <value>Not set id of position</value>
+    <value>Not set id of Position</value>
   </data>
   <data name="PositionNotFound" xml:space="preserve">
     <value>Position not found</value>
@@ -147,16 +147,82 @@
   <data name="PositionNullReference" xml:space="preserve">
     <value>Position is null reference</value>
   </data>
+  <data name="CustomerNotFound" xml:space="preserve">
+    <value>Customer not found</value>
+  </data>
   <data name="UserAlreadyExists" xml:space="preserve">
     <value>User with such login already exist</value>
+  </data>
+  <data name="UserIdNotSet" xml:space="preserve">
+    <value>Not set id of User</value>
+  </data>
+  <data name="UserNotFound" xml:space="preserve">
+    <value>User not found</value>
   </data>
   <data name="WrongLogOrPass" xml:space="preserve">
     <value>Wrong login or password</value>
   </data>
-  <data name="UserIdNotSet" xml:space="preserve">
-    <value>Not set id of user</value>
+  <data name="CustomerIdNotSet" xml:space="preserve">
+    <value>Not set id of Customer</value>
   </data>
-  <data name="UserNotFound" xml:space="preserve">
-    <value>User not found</value>
+  <data name="CustomerNullReference" xml:space="preserve">
+    <value>Customer is null reference</value>
+  </data>
+  <data name="FormatIdNotSet" xml:space="preserve">
+    <value>Not set id of Format</value>
+  </data>
+  <data name="FormatNotFound" xml:space="preserve">
+    <value>Format not found</value>
+  </data>
+  <data name="MoneyPrecisionValidate" xml:space="preserve">
+    <value>The Money Precision value must be greater or equal to 0 and less than or equal to 8</value>
+  </data>
+  <data name="PercentyPrecisionValidate" xml:space="preserve">
+    <value>The Percenty Precision value must be greater or equal to 0 and less than or equal to 8</value>
+  </data>
+  <data name="PortfolioPercentWinsValidate" xml:space="preserve">
+    <value>Percent Wins of portfolio cannot be less than zero</value>
+  </data>
+  <data name="PositionOpenWeightValidate" xml:space="preserve">
+    <value>The Weight value must be greater than 0 and less than or equal to 10,000.</value>
+  </data>
+  <data name="ProfileIdNotSet" xml:space="preserve">
+    <value>Not set id of Profile</value>
+  </data>
+  <data name="ProfileNotFound" xml:space="preserve">
+    <value>Profile not found</value>
+  </data>
+  <data name="ProfileNullReference" xml:space="preserve">
+    <value>Profile is null reference</value>
+  </data>
+  <data name="ViewIdNotSet" xml:space="preserve">
+    <value>Not set id of view</value>
+  </data>
+  <data name="ViewNotFound" xml:space="preserve">
+    <value>View not found</value>
+  </data>
+  <data name="ViewNullReference" xml:space="preserve">
+    <value>View is null reference</value>
+  </data>
+  <data name="ViewTemplateColumnIdNotSet" xml:space="preserve">
+    <value>Not set id of ViewTemplateColumn</value>
+  </data>
+  <data name="ViewTemplateColumnNameNotSet" xml:space="preserve">
+    <value>Not set Name of ViewTemplateColumn</value>
+  </data>
+  <data name="ViewTemplateColumnNotFound" xml:space="preserve">
+    <value>ViewTemplateColumn not found</value>
+  </data>
+  <data name="ViewTemplateColumnNullReference" xml:space="preserve">
+    <value>ViewTemplateColumn is null reference</value>
+  </data>
+  <data name="ViewTemplateIdNotSet" xml:space="preserve">
+    <value>Not set id of ViewTemplate</value>
+  </data>
+  <data name="ViewTemplateNotFound" xml:space="preserve">
+    <value>ViewTemplate not found</value>
+  </data>
+  <data name="ViewTemplateNullReference" xml:space="preserve">
+    <value>ViewTemplate is null reference</value>
   </data>
 </root>
